# ECS-practice

./: .gitignore  README.md
impl-opengl/: CMakeCache.txt  CMakeLists.txt  ECS-PRACTICE-CKC  Makefile  README.md  cachegrind.out.3659  cachegrind.out.4501  cachegrind.out.4570  cachegrind.out.4687  cachegrind.out.4756  cachegrind.out.5699  cachegrind.out.5843  cachegrind.out.5937  cachegrind.out.6004  cachegrind.out.6086  cachegrind.out.6585  cachegrind.out.6698  cachegrind.out.7286  cachegrind.out.7393  cachegrind.out.7464  cachegrind.out.823  cmake_install.cmake
impl-opengl/shaders/: simple_shader.frag  simple_shader.vert
impl-opengl/src/: app.cpp  app.hpp  app2.cpp  app2.hpp  main.cpp  window_manager.cpp  window_manager.hpp
impl-opengl/src/components/: camera.cpp  camera.hpp  gravity.hpp  renderable.hpp  rigid_body.hpp  rotational.hpp  transform.hpp
impl-opengl/src/core/: component_array.hpp  component_manager.hpp  coordinator.hpp  entity_manager.hpp  event.hpp  event_manager.hpp  system.hpp  system_manager.hpp  types.hpp
impl-opengl/src/graphics/: shader.cpp  shader.hpp
impl-opengl/src/oop/: oop.cpp  oop.hpp
impl-opengl/src/systems/: physics_system.cpp  physics_system.hpp  render_system.hpp  render_systemp.cpp  rotational_system.cpp  rotational_system.hpp
